[tool.poetry]
name = "ea-imagery-api"
version = "0.1.0"
description = ""
authors = ["Matthew Whittle <matthewjwhittle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.114.2"}
geopandas = "^1.0.1"
requests = "^2.32.3"
pyarrow = "^17.0.0"
tqdm = "^4.66.5"
numpy = "<2.0.0"
shapely = "^2.0.6"
aiohttp = "^3.10.5"
rasterio = "^1.3.11"
rio-cogeo = "^5.3.4"
terracotta = "^0.8.5"
mercantile = "^1.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
folium = "^0.17.0"
matplotlib = "^3.9.2"
mapclassify = "^2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
